# s25client

./: .bzrignore  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .markdownlint.yml  .pre-commit-config.yaml  .travis.yml  6_match_labels.csv  AI_COMBAT.md  CLAUDE.md  CMakeLists.txt  ConvertVs2012To2010.bat  Dockerfile  Doxyfile.in  INSTALL  Jenkinsfile  PACKAGING.md  README.md  RTTR_Version.cpp  appveyor.yml  buildCMakeSrc.sh  build_paths.h.cmake  build_paths.h.in  build_version.cpp  build_version.h  build_version.h.cmake  build_version.h.in  build_version_defines.h.cmake  building_log_fix.csv  building_log_new.csv  building_log_old.csv  codecov.yml  contrib.cmake  copyDepsToBuildDir.cmake  cpp.hint  issue_3_plan_240326.md  shell.nix  start.sh  (+4 more)
common/: CMakeLists.txt  RTTR_Assert.cpp
common/helpers/: mathFuncs.cpp
common/include/: RTTR_Assert.h  RTTR_AssertError.h  commonDefines.h  enum_cast.hpp
contrib/: CMakeLists.txt  full-contrib-msvc.rar  full-contrib-msvc2010.rar
contrib/archives/: opengl.rar
contrib/backport/: Readme.txt
contrib/glad/: CMakeLists.txt  openglCfg.hpp.cmake
contrib/lua/: SOURCE
driver/: CMakeLists.txt
driver/audio/: CMakeLists.txt
driver/codelite/: audio.project  video.project
driver/src/: AudioDriver.cpp  AudioDriver.h  AudioDriverLoaderInterface.h  AudioInterface.cpp  AudioInterface.h  AudioType.h  CMakeLists.txt  DebugNew.h  DriverInterface.cpp  DriverInterface.h  DriverInterfaceVersion.h  EffectPlayId.h  Interface.h  KeyEvent.h  MouseCoords.h  Sound.cpp  Sound.h  SoundHandle.h  VideoDriver.cpp  VideoDriver.h  VideoDriverLoaderInterface.h  VideoInterface.cpp  VideoInterface.h  driverDefines.h  main.h  tempname.cpp  tempname.h
driver/video/: CMakeLists.txt
extras/: CMakeLists.txt
extras/ai-battle/: CMakeLists.txt  HeadlessGame.cpp  HeadlessGame.h  main.cpp
extras/audioDrivers/: CMakeLists.txt
extras/createBundle/: CMakeLists.txt
extras/data-extractor/: CMakeLists.txt  DataExtractor.cpp  DataExtractor.h  SnapshotLoader.cpp  SnapshotLoader.h  main.cpp
extras/data-miner/: CMakeLists.txt  ClickhouseWriter.cpp  ClickhouseWriter.h  DataMiner.cpp  DataMiner.h  ParquetDataMiner.cpp  ParquetDataMiner.h  main.cpp  main2.cpp
extras/macosLauncher/: CMakeLists.txt  Info.plist.in  rttr.terminal  starter.cpp
extras/videoDrivers/: CMakeLists.txt
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/driver/: CMakeLists.txt
libs/libGamedata/: CMakeLists.txt  Rect.h
libs/libsamplerate/: CMakeLists.txt
libs/rttrConfig/: CMakeLists.txt  build_paths.h.cmake  build_version_defines.h.cmake
libs/s25client/: CMakeLists.txt  commands.cpp  commands.h  s25client.cpp
libs/s25main/: AddonHelperFunctions.cpp  AddonHelperFunctions.h  AsyncChecksum.cpp  AsyncChecksum.h  BasePlayerInfo.cpp  BasePlayerInfo.h  BuildingEventLogger.cpp  BuildingEventLogger.h  BuildingRegister.cpp  BuildingRegister.h  CMakeLists.txt  CampaignSaveData.cpp  CampaignSaveData.h  CampaignSettings.cpp  CampaignSettings.h  CampaingSettings.cpp  CampaingSettings.h  CatapultStone.cpp  CatapultStone.h  CheatCommandTracker.cpp  CheatCommandTracker.h  Cheats.cpp  Cheats.h  CollisionDetection.cpp  CollisionDetection.h  CombatEventLogger.cpp  CombatEventLogger.h  CombatLossTracker.cpp  CombatLossTracker.h  CountryEventLogger.cpp  CountryEventLogger.h  CountryPlotEventLogger.cpp  CountryPlotEventLogger.h  DataChangedObservable.cpp  DataChangedObservable.h  Debug.cpp  Debug.h  DrawPoint.h  DrawPointInit.h  EconomyModeHandler.cpp  (+140 more)
rttrConfig/: CMakeLists.txt  ProgramInitHelpers.h  RTTR_Version.cpp  RttrConfig.cpp  RttrConfig.h  build_paths.h.cmake  build_version_defines.h.cmake  files.h
src/: AIBase.h  AIConstruction.cpp  AIConstruction.h  AIEventManager.cpp  AIEventManager.h  AIInterface.cpp  AIInterface.h  AIJHHelper.cpp  AIJHHelper.h  AIPlayer.cpp  AIPlayer.h  AIPlayerJH.cpp  AIPlayerJH.h  AIResourceMap.cpp  AIResourceMap.h  AddonAIDebugWindow.h  AddonAdjustMilitaryStrength.h  AddonAsyncDebug.h  AddonBurnDuration.h  AddonCatapultGraphics.h  AddonChangeGoldDeposits.h  AddonCharburner.h  AddonCustomBuildSequence.h  AddonDefenderBehavior.h  AddonDemolitionProhibition.h  AddonExhaustibleWells.h  AddonInexhaustibleFish.h  AddonInexhaustibleGraniteMines.h  AddonInexhaustibleMines.h  AddonLimitCatapults.h  AddonManager.cpp  AddonManager.h  AddonManualRoadEnlargement.h  AddonMaxRank.h  AddonMaxWaterwayLength.h  AddonMilitaryAid.h  AddonMoreAnimals.h  AddonNoCoinsDefault.h  AddonRefundMaterials.h  AddonRefundOnEmergency.h  (+613 more)
src/addons/: Addon.cpp  Addon.h  AddonAIDebugWindow.h  AddonAdjustMilitaryStrength.h  AddonAsyncDebug.h  AddonBattlefieldPromotion.h  AddonBool.cpp  AddonBool.h  AddonBurnDuration.h  AddonCatapultGraphics.h  AddonChangeGoldDeposits.h  AddonCharburner.h  AddonCoinsCapturedBld.h  AddonCustomBuildSequence.h  AddonDefenderBehavior.h  AddonDemolishBldWORes.h  AddonDemolitionProhibition.h  AddonDisableAutomaticMousePos.h  AddonExhaustibleWater.h  AddonExhaustibleWells.h  AddonFrontierDistanceReachable.h  AddonHalfCostMilEquip.h  AddonImprovedWareOrder.h  AddonInexhaustibleFish.h  AddonInexhaustibleGraniteMines.h  AddonInexhaustibleMines.h  AddonLimitCatapults.h  AddonList.cpp  AddonList.h  AddonManualRoadEnlargement.h  AddonMaxRank.h  AddonMaxWaterwayLength.h  AddonMetalworksBehaviorOnZero.h  AddonMilitaryAid.h  AddonMilitaryControl.h  AddonMilitaryHitpoints.h  AddonMoreAnimals.h  AddonNoAlliedPush.h  AddonNoCoinsDefault.h  AddonNumScoutsExploration.h  (+12 more)
src/ai/: AIBase.h  AIConstruction.cpp  AIConstruction.h  AIEventManager.cpp  AIEventManager.h  AIEvents.h  AIInterface.cpp  AIInterface.h  AIJHHelper.cpp  AIJHHelper.h  AIPlayer.cpp  AIPlayer.h  AIPlayerJH.cpp  AIPlayerJH.h  AIResource.h  AIResourceMap.cpp  AIResourceMap.h  DummyAI.h  Resource.h
src/animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h  BlinkButtonAnim.cpp  BlinkButtonAnim.h  MoveAnimation.cpp  MoveAnimation.h  ToggleAnimation.h
src/buildings/: BurnedWarehouse.cpp  BurnedWarehouse.h  noBaseBuilding.cpp  noBaseBuilding.h  (+20 more)
tests/: CMakeLists.txt
(+3322 files in other folders)
